Fixed spacing issue with settings

--- a/mainsite/static/mainsite/custom.css
+++ b/mainsite/static/mainsite/custom.css
@@ -264,7 +264,7 @@ font.settingsHeading {
 font.settingsField {
     font-weight: bold;
     font-size: 11pt;
-    color: #428BCA;
+    color: #000000;
 }
 
 font.commentTypename {
